clusters/on-prem-k3s-cluster/apps/adguard/service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns
  namespace: adguard
  annotations:
    metallb.universe.tf/allow-shared-ip: "adguard"
spec:
  type: LoadBalancer
  selector:
    app: adguard
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: 53
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: 53
