clusters/on-prem-k3s-cluster/apps/adguard/service-web.yaml
# Web service for AdGuard Home
apiVersion: v1
kind: Service
metadata:
  name: adguard-web
  namespace: adguard
spec:
  selector:
    app: adguard
  ports:
    - name: http
      port: 80
      targetPort: 80
