clusters/on-prem-k3s-cluster/apps/adguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  namespace: adguard
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: adguard.local.alexdevops.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            # This needs to match the web service created
            name: adguard-web
            port:
              number: 80
